form created, able to upload and toggle images

--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
 body {
   background-color: aqua;
 }
+
+.inputs {
+  width: 30vw;
+}
+
+.inputs__form {
+  display: flex;
+  flex-direction: column;
+}
