--- a/style.css
+++ b/style.css
@@ -1,12 +1,69 @@
 body {
-  background-color: aqua;
+  /* box-sizing: border-box;
+  border: 2vw solid rgb(250,250,250);
+  margin: 0;
+  height: 100vh;
+  width: 100vw;
+  background-color: rgba(220,220,220); */
+  background-color: white;
+  background-image: url('./icons/natural-paper.png');
+  margin: 0;
 }
 
-.inputs {
-  width: 30vw;
+.edit {
+  position: fixed;
+  box-sizing: border-box;
+  margin: 15vh 20vw;
+  padding: 0 2vw 2vh 2vw;
+  width: 60vw;
+  height: 70vh;
+  background-color: rgba(255,255,255,0.9);
+  box-shadow: 0 5px 10px 2px rgba(0, 0, 0, 0.3);
 }
 
-.inputs__form {
-  display: flex;
-  flex-direction: column;
+.edit-hidden {
+  margin: 90vh 75vw 0 5vw;
+  padding: 1vh 1vw;
+  width: 20vw;
+}
+
+  .edit__header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+    .edit__header__img {
+      height: 8vh;
+      width: 8vh;
+      margin: 0 -2vw;
+    }
+
+    .edit__header__img-hidden {
+      margin: 0 -1vw;
+      transform: rotate(180deg);
+    }
+  .edit__form {
+    display: flex;
+    flex-direction: column;
+  }
+
+    .edit__form__input {
+      margin: 3px;
+      border: none;
+      width: 25vw;
+      border-bottom: 1px solid black;
+      background-color: inherit;
+    }
+
+    .edit__form__input:focus {
+      background-color: rgba(255,255,255,0.5);
+    }
+.preview {
+  box-sizing: border-box;
+  border: 2vw solid rgba(255,255,255,0.5);
+  margin: 0;
+  height: 100vh;
+  width: 100vw;
+  background-color: rgba(50,50,50,0.1);
 }
