--- a/style.css
+++ b/style.css
@@ -1,31 +1,36 @@
 body {
-  /* box-sizing: border-box;
-  border: 2vw solid rgb(250,250,250);
-  margin: 0;
-  height: 100vh;
-  width: 100vw;
-  background-color: rgba(220,220,220); */
   background-color: white;
   background-image: url('./icons/natural-paper.png');
   margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+
 }
 
 .edit {
   position: fixed;
   box-sizing: border-box;
-  margin: 15vh 20vw;
+  top: 15vh;
+  left: 20vw;
   padding: 0 2vw 2vh 2vw;
   width: 60vw;
   height: 70vh;
   background-color: rgba(255,255,255,0.9);
   box-shadow: 0 5px 10px 2px rgba(0, 0, 0, 0.3);
+  transition: 0.3s ease;
+  /* overflow-y: scroll; */
 }
 
 .edit-hidden {
-  margin: 90vh 75vw 0 5vw;
+  top: -65vh;
+  left: 90vw;
   padding: 1vh 1vw;
-  width: 20vw;
+  width: 5vw;
 }
+
+  .edit-hidden * {
+    display: none;
+  }
 
   .edit__header {
     display: flex;
@@ -34,15 +39,24 @@ body {
   }
 
     .edit__header__img {
+      position: absolute;
+      top: 0;
+      right: 0;
       height: 8vh;
       width: 8vh;
-      margin: 0 -2vw;
+      transform: rotate(180deg);
+      transition: 0.3s ease;
     }
 
     .edit__header__img-hidden {
-      margin: 0 -1vw;
-      transform: rotate(180deg);
+      display: block;
+      top: 63vh;
+      height: 3vw;
+      width: 3vw;
+      margin: 1vh 1vw;
+      transform: rotate(0deg);
     }
+
   .edit__form {
     display: flex;
     flex-direction: column;
@@ -59,6 +73,7 @@ body {
     .edit__form__input:focus {
       background-color: rgba(255,255,255,0.5);
     }
+
 .preview {
   box-sizing: border-box;
   border: 2vw solid rgba(255,255,255,0.5);
@@ -66,4 +81,34 @@ body {
   height: 100vh;
   width: 100vw;
   background-color: rgba(50,50,50,0.1);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
+
+  .preview__img {
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: 4vw;
+    height: 15vh;
+  }
+
+  .preview__large-inline {
+    display: flex;
+    flex-direction: row;
+    font-size: 5rem;
+    margin: 2vh;
+  }
+
+  .preview__medium-inline {
+    display: flex;
+    flex-direction: row;
+    margin: 0;
+  }
+
+  .preview__small-block {
+    display: flex;
+    flex-direction: column;
+  }
